# ST-2

./: CMakeLists.txt
include/: circle.h  tasks.h
src/: CMakeLists.txt  circle.cpp  tasks.cpp
test/: tests.cpp
